--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     text-align: center;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+}
 .container {
 	max-width: 390px;
 }
@@ -29,7 +33,7 @@ body {
 
 .btn {
 	display: inline-block;
-	padding: 10px 20px;
+	padding: 10px 10px;
 	border: none;
 	background: rgb(248, 168, 24);
 	border-radius: 10px;
@@ -38,6 +42,20 @@ body {
 	font-weight: 700;
 
 	transition: background .2s linear;
+}
+
+.added-to-cart {
+    display: inline-block;
+    padding: 10px 10px;
+    border: none;
+    background: rgb(204, 49, 49);
+    border-radius: 10px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+
+    transform: background .2s linear;
+
 }
 
 .btn:hover {
