--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ body {
 }
 
 .inner {
+    padding: 100px;
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 100px 100px 100px;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 150px 150px 150px;
     grid-gap: 100px;
 }
 
