--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .inner {
-    padding: 100px;
+    margin-top: 25px;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: 150px 150px 150px;
