--- a/style.css
+++ b/style.css
@@ -16,10 +16,9 @@ body {
 }
 
 .inner {
-    margin-top: 25px;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 150px 150px 150px;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 110px 110px 1100px;
     grid-gap: 100px;
 }
 
@@ -62,3 +61,4 @@ body {
 .btn:hover {
 	background: lightgreen;
 }
+
