--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 110px 110px 110px;
     grid-gap: 100px;
+	display: none;
 }
 
 .img {
@@ -53,7 +54,7 @@ body {
 }
 
 .blue-bar {
-	background-color: blue;
+	background-color: #2AABEE;
 	height: 35px;
 	width: 100%;
 	position: fixed; /* Закрепляем полоску вверху страницы */
@@ -68,4 +69,5 @@ body {
     position: absolute;
     left: 0;
     right: 0;
+	margin-top: 5px;
 }
