--- a/style.css
+++ b/style.css
@@ -16,26 +16,27 @@ body {
 }
 
 .inner {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 110px 110px 110px;
-    grid-gap: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .img {
-	width: 100px;
+	width: 300px;
+	border-radius: 20px 20px 20px 20px;
     margin-bottom: -1px;
 }
 
 .item {
 	text-align: center;
+	margin-bottom: 20px; /* Добавляем немного пространства между карточками */
 }
 
 .btn, .quantity-control button {
 	display: inline-block;
 	padding: 10px 10px;
 	border: none;
-	background: rgb(248, 168, 24);
+	background: black;
 	border-radius: 10px;
 	color: #fff;
 	text-transform: uppercase;
