--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-size: 18px;
-	color: var(--tg-theme-text-color);
+	color: black;
 	background: white;
     text-align: center;
 }
@@ -54,3 +54,4 @@ body {
 .btn:hover {
 	background: lightgreen;
 }
+
